--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,27 @@ version: 2
 jobs:
   build:
     docker:
+      - image: circleci/golang:1.10
+    working_directory: /go/src/github.com/amrfaissal/anomalia
+    steps:
+      - checkout
+      - run: go get -v -t -d ./...
+      - run: go test -v ./...
+
+  build-go1.11:
+    docker:
       - image: circleci/golang:1.11
     working_directory: /go/src/github.com/amrfaissal/anomalia
     steps:
       - checkout
+      - run: go get -v -t -d ./...
+      - run: go test -v ./...
 
+  build-go1.12:
+    docker:
+      - image: circleci/golang:1.12
+    working_directory: /go/src/github.com/amrfaissal/anomalia
+    steps:
+      - checkout
       - run: go get -v -t -d ./...
       - run: go test -v ./...
