--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,26 @@
-# Golang CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-go/ for more details
 version: 2
+
+workflows:
+  version: 2
+  test:
+    jobs:
+      - test-1.10
+      - test-1.12
+
 jobs:
-  build:
+  test-1.10:
     docker:
       - image: circleci/golang:1.10
     working_directory: /go/src/github.com/amrfaissal/anomalia
     steps:
       - checkout
       - run: go get -v -t -d ./...
-      - run: go test -v ./...
+      - run: go test -v -race
+
+  test-1.12:
+    docker:
+      - image: circleci/golang:1.12
+    working_directory: ~/anomalia
+    steps:
+      - checkout
+      - run: go test -v -race
